[package]
name = "esp32c3_wifi"
version = "0.1.3"
edition = "2021"
authors = ["banchen21 <banchen8964@gmail.com>", "Sergio Gasquez <sergio.gasquez@gmail.com>"]

# 添加描述
description = "A Rust library for managing WiFi on the ESP32-C3 microcontroller."

# 添加许可证信息
license = "MIT OR Apache-2.0"

# 添加文档链接（如果有的话）
documentation = "https://docs.rs/esp32c3_wifi"

# 添加主页（如果有的话）
homepage = "https://github.com/banchen21/esp32c3_wifi"

# 添加代码仓库信息
repository = "https://github.com/banchen21/esp32c3_wifi.git"

[dependencies]
anyhow = "=1.0.86"
esp-idf-svc = "=0.49.0"
log = "=0.4.22"

[build-dependencies]
embuild = "=0.32.0"

[dev-dependencies]
toml-cfg = "=0.1.3"
